# daphttpd

./: CMakeLists.txt  Makefile.win  README.md  dap-httpd_logs.txt  dap_httpd  main.c
c-ares/: Makefile.win  ares_setup.h
config/: dap-httpd.cfg
fcgi/: CMakeLists.txt  helloworld  helloworld.c  makefile.win
files/www/: index.html
libdap/: Makefile.win
libdap-server/: CTestTestfile.cmake  Makefile.win
libdap-server-core/: CTestTestfile.cmake  Makefile.win  dap_client_remote.c  dap_client_remote.h  dap_events.c  dap_events.h  dap_events_socket.c  dap_events_socket.h  dap_memcached.c  dap_server.c  dap_server.h  dap_traffic_track.c
libdap-server-core/test/: CTestTestfile.cmake  core_server_test
libdap-server/enc_server/: CTestTestfile.cmake  dap_enc_http.c  dap_enc_ks.c
libdap-server/http_server/: CMakeLists.txt  CTestTestfile.cmake  dap_http.c  dap_http_fcgi.c  dap_http_fcgi.h  dap_http_folder.c  dap_http_simple.c
libdap-server/test/: CTestTestfile.cmake  Makefile  libdap-server
libdap/core/: Makefile  dap_circular_buffer.c  dap_common.c
libdap/crypto/: CMakeLists.txt  Makefile.win  dap_enc_key.c  dap_enc_key.h  dap_enc_picnic.c  dap_enc_tesla.c  dap_enc_tesla.h
libfcgi2/: Makefile.win
libfcgi2/include/: fcgi_stdio.h
libfcgi2/perl/: FCGI.PL  MYMETA.json  (+1 more)
libjson-c/: Makefile.win
libmagic/: Makefile.win
libmemcached/: Makefile.win
pthread-win32/: Makefile.win  files
regex/: Makefile.win
wepoll/: Makefile.win
win32/: [cdf_makebin].mk  [cdf_makelib].mk  [cdf_set].mk  [cdf_set_con].mk
zlib/: Makefile.gcc  Makefile.vcc  Makefile.win
(+83 files in other folders)
